# RsClass

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/gui/: load_dialog.rs  mod.rs  process_dialog.rs  prompt_save_dialog.rs  save_dialog.rs  type_selection_dialog.rs
src/gui/dialogs/: process_dialog.rs
src/ops/: linux.rs  mod.rs  win.rs
src/typing/: bool.rs  float.rs  int.rs  mod.rs  str.rs  struct_dt.rs
src/win_ops/: mod.rs
tests/: test_simple_linux_read.rs  test_simple_windows_read.rs
