[package]
name = "rs_class"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.54.0"

egui = "0.31.0"
eframe = "0.31.0"

byteorder = "1.5.0"
paste = "1.0.14"
sysinfo = "0.33.1"
