[package]
name = "rs_class"
version = "0.1.0-alpha"
edition = "2021"
publish = false

[dependencies]
# GUI / EXE
egui = "0.31.0"
eframe = "0.31.0"

# CORE / LIB
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
[dependencies.windows-sys] 
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug"
]