[package]
name = "rs_class"
version = "0.1.0-alpha"
edition = "2021"
publish = false

[dependencies]
# GUI / EXE
egui = "0.31.0"
eframe = "0.31.0"

# CORE / LIB
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
enum_dispatch = "0.3.13"
ron = "0.8.1"
lazy_static = "1.5.0"
egui-file-dialog = "0.9.0"
[dependencies.windows-sys] 
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus"
]
